--- a/proto.html
+++ b/proto.html
@@ -78,13 +78,15 @@
 	<div data-role="page" id="leaderboard">
 		<a href="#" data-rel="back">Go Back</a>
 		
-		<div id="abcd">renan</div>
+		<div id="lbname">renan</div>
+		<div id="lbscore">0</div>
 		<script>
 		
 		$.getJSON("https://api.mongolab.com/api/1/databases/comp2910/collections/Leaderboard?apiKey=Vj5CySJu_PZcXUFihbe274Ty73YE9rHJ", function(data){
 			$.each(data, function (index, value) {
 
-			$("#abcd").html(value.name);
+			$("#lbname").html(value.name);
+			$("#lbscore").html(value.score);
 			
 			});
 		 $('#tblLeaderBoard').append(html);
@@ -962,6 +964,10 @@ function gameOver() {
 	});
 	if(gameEnd == false){
 			snd_gameover.play();//game over sound
+			$.ajax( { url: "https://api.mongolab.com/api/1/databases/comp2910/collections/Leaderboard?apiKey=Vj5CySJu_PZcXUFihbe274Ty73YE9rHJ",
+			  data: JSON.stringify( { "name" : "George" , "score" : score } ),
+			  type: "POST",
+			  contentType: "application/json" } );
 			gameEnd = true;
 		}
 	document.getElementById('background').pause();
