put logo on options page

--- a/proto.html
+++ b/proto.html
@@ -69,6 +69,7 @@
 		
 		<div id="sfx" style="width:260px; margin:15px;"></div>
 		
+		<img id="teamlogo" src="LOGO_HI_RES.png" />
 	</div>
 	
 	<div data-role="page" id="tutorial">
